# apexive-pilotlog

./: .gitignore  .pre-commit-config.yaml  2024-02-17 10:24:55 output.csv  2024-02-18 14:29:16 output.csv  README.md  import.py  manage.py  pyproject.toml  requirements.txt
apexive/: asgi.py  settings.py  urls.py  wsgi.py
exporter/: builder.py  tables.py  template.py  types.py  writer.py
exporter/tests/: test_template.py
importer/: converters.py  import_saver.py  models.py  reader.py  readers.py  saver.py  utils.py
importer/converters/: base.py  from_dict.py  iter.py  json.py
pilotlog/: apps.py  exporter.py  forms.py  importer.py  models.py  urls.py  views.py
pilotlog/api/: serializers.py  urls.py  validators.py  views.py
pilotlog/api/tests/: test_api.py
pilotlog/drf/: serializers.py  urls.py  validators.py  views.py  viewsets.py
pilotlog/extns/exporter/: logbook.py  writers.py
pilotlog/extns/importer/: mixs.py  saver.py
pilotlog/extns/importer/tests/: test_import_with_saver.py
pilotlog/importer/: readers.py  saver.py
pilotlog/management/commands/: assosiate.py  export_logbook_csv.py  import.py  import_pilot_json.py
pilotlog/migrations/: 0001_initial.py
pilotlog/querysets/: exporting.py
pilotlog/serives/: assosiations.py  exporting.py  importing.py
pilotlog/tests/: test_views.py
static/: samples.json
templates/pilotlog/: index.html
tests/: test_api.py  test_import_with_saver.py  test_template.py  test_views.py
